--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -14,7 +14,8 @@
   align-items: left;
   text-align: center;
   background-image: url("../../images/HomeBanner.png");
-  background-size: cover;
+  background-size: 100vw;
+  background-repeat: no-repeat;
   color: #f0f0f0;
 }
 
@@ -23,16 +24,17 @@
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 80px;
   color: #8dc9fe;
-  height: 50px;
+  height: 10%;
 }
 
 .about .prompt {
   width: 60%;
   font-size: 30px;
+  height: 90%;
 }
 
 .prompt svg {
-  font-size: 60px;
+  font-size: 6vw;
   margin: 5px;
   color: white;
 }
