--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -22,14 +22,14 @@
 .about h2 {
   width: 60%;
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 80px;
+  font-size: 8vw;
   color: #8dc9fe;
   height: 10%;
 }
 
 .about .prompt {
   width: 60%;
-  font-size: 30px;
+  font-size: 3vw;
   height: 90%;
 }
 
@@ -40,7 +40,7 @@
 }
 
 .skills {
-  font-size: 35px;
+  font-size: 5vw;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -59,36 +59,4 @@
 
 .list span {
   font-size: 20px;
-}
-
-@media only screen and (max-width: 900px) {
-  .about h2 {
-    font-size: 40px;
-  }
-
-  .about .prompt {
-    margin-top: 10px;
-    font-size: 20px;
-    width: 80%;
-  }
-
-  .skills {
-    text-align: center;
-  }
-
-  .list {
-    padding: 0;
-  }
-
-  .skills h2 {
-    font-size: 30px;
-  }
-
-  .spotify {
-    align-items: center;
-  }
-
-  .spotify .item {
-    align-self: center;
-  }
 }
