--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -60,7 +60,7 @@
 .list span {
   font-size: 20px;
 }
-
+/* 
 @media only screen and (max-width: 900px) {
   .about h2 {
     font-size: 40px;
@@ -74,10 +74,10 @@
 
   .skills {
     text-align: center;
-  }
+  } */
 
-  .list {
-    padding: 0;
+  /* .list { */
+    /* padding: 0;
   }
 
   .skills h2 {
@@ -91,4 +91,37 @@
   .spotify .item {
     align-self: center;
   }
+} */
+
+@media (max-width: 900px) {
+  .about {
+    flex-direction: row; /* Change direction to horizontal */
+    flex-wrap: wrap; /* Allow paragraphs to wrap to next line if necessary */
+    justify-content: center; /* Center paragraphs horizontally */
+  }
+
+  .about h2 {
+    width: 60%;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 6vw;
+    color: #8dc9fe;
+    height: 10%;
+  }
+  .about .prompt {
+    width: 60%;
+    font-size: 3vw;
+    height: 70%;
+    padding-top: 1%;
+  }
+  
+  .prompt svg {
+    font-size: 6vw;
+    margin: 5px;
+    color: white;
+  }
+  
 }
+
+
+
+
