--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,8 +1,8 @@
 .navbar {
   width: 100%;
-  height: 100px;
+  height: 80px;
   background: #38599b;
-  font-family: "Times New Roman", Times, serif;
+  font-family: "garamond";
 }
 
 .links {
