--- a/src/components/Pages/Home.css
+++ b/src/components/Pages/Home.css
@@ -1,7 +1,7 @@
 .home {
   width: 100%;
   align-items: center;
-  font-family: "Arial", sans-serif;
+  font-family: "Segoe UI", sans-serif;
   color: #3e497a;
 }
 
@@ -30,35 +30,47 @@
 .about .prompt {
   width: 60%;
   font-size: 2vw;
+  text-shadow: 2px 2px 3px #5282ba;
   height: 90%;
   padding-top: 3%;
-  margin-top: 2vw;
+  margin-top: 3vw;
 }
 
 .prompt svg {
   font-size: 4vw;
   margin: 5px;
   color: white;
+  text-shadow: 2px 2px 5px #3e497a;
 }
 
 .skills {
   font-size: 3vw;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   width: 100%;
   display: flex;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  padding-top: 2%;
 }
 
 .skills h1 {
   color: #3e497a;
+  font-size: 3.5vw;
+}
+
+.skills h2 {
+  color: #3e497a;
+  font-size: 2.7vw;
+  margin-bottom: 0;
 }
 
 .skills .list {
   list-style: none;
   width: 60%;
+  margin: 0;
 }
 
 .list span {
-  font-size: 20px;
+  font-size: 1.7vw;
 }
